--- a/src/pages/section1.astro
+++ b/src/pages/section1.astro
@@ -21,7 +21,7 @@ import Tag from "../components/Tag.astro";
     </div>
     <div class="text-center text-sm mx-4 mt-4 xl:mx-80">
       <p class="text-1xl xl:text-base">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
+        Especializada em Direito Tributário para Empresas e Pessoas Físicas. Reduza seus custos com impostos e garanta segurança jurídica.
       </p>
     </div>
     <div>
@@ -32,8 +32,8 @@ import Tag from "../components/Tag.astro";
       <div class="w-10 h-10 bg-[url('/assets/image2.jpg')] bg-cover bg-center rounded-full border-2 border-primary">
       </div>
       <div class="text-xs">
-        <span class="block">Lorem ipsum</span>
-        <p>Lorem ipsum dolor</p>
+        <span class="block text-primary font-semibold">Especialidade</span>
+        <p>Advogada Tributarista</p>
       </div>
     </div>   
    </div>
