--- a/src/pages/section5.astro
+++ b/src/pages/section5.astro
@@ -2,12 +2,13 @@
 import Tag from "../components/Tag.astro";
 ---
 
-<section id="section-5" class="flex flex-col xl:flex-row items-center justify-center mx-4 mt-24 gap-4">
-  <div class="flex flex-col-reverse xl:flex-row items-center max-w-2xl gap-24 mx-auto">
+<section id="section-5" class="flex flex-col xl:flex-row items-center justify-center mx-4 my-16 gap-4">
+  <div class="flex flex-col-reverse xl:flex-row items-center max-w-3xl gap-24 mx-auto">
     <div class="">
-      <h2>Loren, ipsum</h2>
+      <h2 class="font-bold text-2xl">Suporte próximo e orientação em cada etapa
+      </h2>
       <p class="text-text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Egestas in dui dictumst duis malesuada platea turpis rhoncus. Lorem ipsum dolor sit amet consectetur. Egestas in dui dictumst duis malesuada platea turpis rhoncus.
+        Ao contratar minha consultoria, você não recebe apenas uma análise jurídica — você conta com acompanhamento direto, respostas claras e suporte contínuo. Meu compromisso é estar ao seu lado do início ao fim, garantindo segurança, confiança e tranquilidade em todas as decisões tributárias.
       </p>
     </div>
     <div class="relative">
