--- a/src/pages/section6.astro
+++ b/src/pages/section6.astro
@@ -2,15 +2,15 @@
 import Button from "../components/Button.astro";
 ---
 
-<section id="section-6" class="my-8" style="border-top: 2px solid; border-image: linear-gradient(to right, transparent, #EDD89B, transparent) 1;">
-  <div class="py-12">
-    <div id="text-img" class="flex flex-col-reverse gap-4 items-center justify-between mb-4 mx-4 xl:mx-auto max-w-3xl xl:flex-row-reverse">
+<section id="section-6" class="flex justify-center items-center" style="border-top: 2px solid; border-image: linear-gradient(to right, transparent, #EDD89B, transparent) 1;">
+  <div class="">
+    <div id="text-img" class="flex flex-col-reverse gap-8 items-center xl:items-start justify-between mx-8 my-16 xl:mx-auto max-w-3xl xl:flex-row-reverse">
       <div id="title" class="flex flex-col items-center justify-center">
-        <div>
-          <h3>Loren, ipsum</h3>
-          <h2>Lorem, ipsum dolor sit amet</h2>
+        <div class="flex flex-col gap-[0.2rem] items-start justify-start text-justify max-w-2xl">
+          <h3 class="text-sm font-semibold text-primary">Renata Torres</h3>
+          <h2 class="text-xl font-bold">Um pouco sobre mim</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium cupiditate, nisi vitae odit saepe ipsam alias necessitatibus quae similique nostrum sequi quo esse delectus at, mollitia deserunt porro aliquid adipisci.
+            Sou advogada especializada em Direito Tributário, com atuação focada em consultorias estratégicas, defesas administrativas e formação jurídica personalizada. Minha missão é simplificar o que parece complexo, oferecendo soluções jurídicas com clareza, ética e resultados. Atuo com empresas, profissionais liberais e também com alunos que desejam dominar a prática tributária com segurança.
           </p>
         </div>
         <Button span="Falar com Especialista"/>
