--- a/src/pages/section_mobile.astro
+++ b/src/pages/section_mobile.astro
@@ -7,10 +7,10 @@
   </div>
 
   <div class="mx-4 max-w-full">
-    <span class="text-2xl font-semibold text-text xl:max-w-full">Lorem ipsum dolor sit amet</span>
+    <span class="text-2xl font-semibold text-text xl:max-w-full">Transformando Conhecimento</span>
 
     <p class="text-text max-w-lg mt-4">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Egestas in dui dictumst duis malesuada platea turpis rhoncus. Lorem ipsum dolor sit amet consectetur. Egestas in dui dictumst duis malesuada platea turpis rhoncus.
+      A informação certa pode mudar uma carreira ou salvar uma empresa. Ao longo da minha jornada, compartilho experiências e estratégias que descomplicam o Direito Tributário e inspiram ação. Em cada palestra, aula ou encontro, o objetivo é o mesmo: empoderar com clareza, segurança e propósito.
     </p>
   </div>
   
