--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -1,7 +1,10 @@
+---
+const { title, content } = Astro.props;
+---
 <div class="bg-card text-white rounded-2xl shadow-lg p-6 max-w-xs mx-auto border-[0.1rem] border-primary">
 
   <div class="bg-primary w-12 h-2 mx-auto rounded-full mb-4"></div>
   
-  <span class="font-bold text-xl block mb-2">Lorem ipsum dolor sit amet</span>
-  <p class="text-sm">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Egestas in dui dictumst duis malesuada platea turpis rhoncus.</p>
+  <span class="font-bold text-xl block mb-2">{ title }</span>
+  <p class="text-sm">{ content }</p>
 </div>
