--- a/src/components/cardsection1.astro
+++ b/src/components/cardsection1.astro
@@ -1,4 +1,8 @@
+---
+const { content } = Astro.props;
+---
+
 <div class="text-sm xl:text-base text-text">
   <img class="w-10" src="/assets/icons/star.svg" alt="Icon">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe beatae aperiam reprehenderit.</p>
+  <p>{ content }</p>
 </div>
