--- a/src/pages/section4.astro
+++ b/src/pages/section4.astro
@@ -4,10 +4,10 @@
   
   <div class="bg-primary w-full xl:h-full h-48 xl:rounded-md flex items-start justify-start p-8">
     <div class="max-w-full">
-      <span class="text-2xl font-semibold text-background xl:max-w-full">Lorem ipsum dolor sit amet</span>
+      <span class="text-2xl font-semibold text-background xl:max-w-full">Transformando Conhecimento</span>
 
       <p class="text-background max-w-lg mt-4">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Egestas in dui dictumst duis malesuada platea turpis rhoncus. Lorem ipsum dolor sit amet consectetur. Egestas in dui dictumst duis malesuada platea turpis rhoncus.
+        A informação certa pode mudar uma carreira ou salvar uma empresa. Ao longo da minha jornada, compartilho experiências e estratégias que descomplicam o Direito Tributário e inspiram ação. Em cada palestra, aula ou encontro, o objetivo é o mesmo: empoderar com clareza, segurança e propósito.
       </p>
     </div>
   </div>
