--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Section_8 from './section8.astro';
 import Section_9 from './section9.astro';
 import Section_Mobile from './section_mobile.astro';
 import Layout from '../layouts/Layout.astro';
+import Icon from './icon.astro';
 ---
 
 <Layout 
@@ -39,7 +40,7 @@ import Layout from '../layouts/Layout.astro';
     <Section_8 />
 
     <Section_9 />
-
+    
   </main>
   
 </Layout>
