--- a/src/components/email.astro
+++ b/src/components/email.astro
@@ -6,11 +6,12 @@ const { title, content, url } = Astro.props;
   <div class="flex justify-center items-center w-12 h-12">
   
   <lord-icon
-    src="https://cdn.lordicon.com/xtzvywzp.json"
-    trigger="hover"
-    colors="primary:#edd89b"
-    style="width:250px;height:250px">
+      src="https://cdn.lordicon.com/ayhtotha.json"
+      trigger="hover"
+      colors="primary:#edd89b"
+      style="width:250px;height:250px">
   </lord-icon>
+  
   </div>
   
   <div class="">
