--- a/src/components/icon-contact.astro
+++ b/src/components/icon-contact.astro
@@ -1,7 +1,7 @@
 <script src="https://cdn.lordicon.com/lordicon.js"></script>
 <lord-icon
-    src="https://cdn.lordicon.com/xtzvywzp.json"
+    src="https://cdn.lordicon.com/ayhtotha.json"
     trigger="hover"
-    colors="primary:#ffffff"
+    colors="primary:#edd89b"
     style="width:250px;height:250px">
 </lord-icon>
