--- a/src/pages/section2.astro
+++ b/src/pages/section2.astro
@@ -6,7 +6,7 @@ import Cardsection1 from "../components/cardsection1.astro";
 <section id="section-2" class="flex justify-center items-center py-16 bg-background">
   <div class="flex flex-col items-center justify-center mx-4 xl:mx-auto max-w-3xl xl:mt-12">
     
-    <div id="card-icon" class="flex flex-col items-center justify-center mb-8 border-2 border-primary rounded-2xl p-4 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
+    <div id="card-icon" class="flex flex-col gap-8 xl:gap-0 items-center justify-center mb-8 border-2 border-primary rounded-2xl p-4 mx-4 xl:mx-auto max-w-4xl xl:flex-row xl:space-x-8">
       <Cardsection1 content="Evite riscos fiscais e otimize a carga tributária da sua empresa com segurança jurídica. Soluções sob medida para o seu negócio." icon="./assets/icons/icon1.svg" alt="Icon"/>
       <Cardsection1 content="Recebeu autuação? Precisa de um planejamento sólido? Conte com uma especialista que atua com precisão em cada detalhe tributário." icon="./assets/icons/icon2.svg" alt="Icon"/>
       <Cardsection1 content="Aprenda na prática com quem vive o Direito Tributário no dia a dia. Monitorias exclusivas para estudantes e profissionais da área." icon="./assets/icons/icon3.svg" alt="Icon"/>
