--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ interface Props {
 const { title, description, image, url } = Astro.props as Props;
 import '../styles/global.css';
 import Analytics from '@vercel/analytics/astro'
+import  SpeedInsights  from '@vercel/speed-insights/astro'
 ---
 
 <html lang="pt-br">
@@ -44,6 +45,7 @@ import Analytics from '@vercel/analytics/astro'
     
     <!-- Vercel Analytics -->
     <Analytics />
+    <SpeedInsights />
 
 	</head>
   <body>
