--- a/src/pages/section6.astro
+++ b/src/pages/section6.astro
@@ -10,7 +10,7 @@ import Button from "../components/Button.astro";
           <h3 class="text-sm font-semibold text-primary">Renata Torres</h3>
           <h2 class="text-xl font-bold">Um pouco sobre mim</h2>
           <p>
-            Sou advogada especializada em Direito Tributário, com atuação focada em consultorias estratégicas, defesas administrativas e formação jurídica personalizada. Minha missão é simplificar o que parece complexo, oferecendo soluções jurídicas com clareza, ética e resultados. Atuo com empresas, profissionais liberais e também com alunos que desejam dominar a prática tributária com segurança.
+            Sou Advogada Tributarista, com uma atuação voltada à consultoria estratégica, defesas administrativas e formação jurídica aplicada à prática.Com foco em gestão, finanças e crescimento sustentável, ajudo empresas e profissionais liberais a estruturarem decisões seguras e eficientes no campo tributário.
           </p>
         </div>
         <Button span="Falar com Especialista"/>
