--- a/src/pages/section7.astro
+++ b/src/pages/section7.astro
@@ -3,8 +3,8 @@ import Faq from "../components/faq.astro";
 import TitleFaqs from "../components/title_faqs.astro";
 ---
 
-<section id="section-7" class="flex justify-center items-center pb-4">
-  <div class="gap-2 flex flex-col items-center justify-center mb-8 mx-4 xl:mx-auto max-w-3xl">
+<section id="section-7" class="flex justify-center items-center mx-auto max-w-3xl">
+  <div class="gap-2 flex flex-col items-center justify-center w-full max-w-3xl">
 
     <TitleFaqs />
 
