--- a/src/pages/section3.astro
+++ b/src/pages/section3.astro
@@ -12,7 +12,7 @@ import Card from "../components/card.astro";
       <Card title="Planejamento Tributário Inteligente" content="Evite desperdícios e reduza encargos legais com estratégias alinhadas à legislação. O foco é aumentar a sua margem com segurança jurídica."/>
       <Card title="Consultoria para Empresas" content="Atendimento personalizado para empresários que precisam entender, ajustar ou reestruturar sua operação fiscal."/>
       <Card title="Defesa em Processos Administrativos" content="Atuação técnica e estratégica na defesa de autuações fiscais, notificações e fiscalizações que envolvem tributos federais, estaduais ou municipais."/>
-      <Card title="Monitorias e Aulas Práticas" content="Para estudantes de Direito e profissionais iniciantes que querem dominar a prática tributária com orientação direta de quem vive isso na rotina forense."/>
+      <Card title="Mentoria para Mulheres Empreendedoras" content="Possui uma atuação voltada à gestão, finanças e crescimento estratégico, tem impulsionado empreendedoras a tirarem seus negócios do papel e levá-los a um novo patamar com estrutura, clareza e consistência."/>
 
     </div>
   </div>
