--- a/src/pages/section5.astro
+++ b/src/pages/section5.astro
@@ -1,15 +1,18 @@
 ---
+import Button from "../components/Button.astro";
 import Tag from "../components/Tag.astro";
 ---
 
 <section id="section-5" class="flex flex-col xl:flex-row items-center justify-center mx-4 my-16 gap-4">
   <div class="flex flex-col-reverse xl:flex-row items-center max-w-3xl gap-24 mx-auto">
     <div class="">
-      <h2 class="font-bold text-2xl">Suporte próximo e orientação em cada etapa
+      <h2 class="font-bold text-2xl">Como funciona a Mentoria?
       </h2>
       <p class="text-text">
-        Ao contratar minha consultoria, você não recebe apenas uma análise jurídica — você conta com acompanhamento direto, respostas claras e suporte contínuo. Meu compromisso é estar ao seu lado do início ao fim, garantindo segurança, confiança e tranquilidade em todas as decisões tributárias.
+        Do planejamento à execução, ofereço direcionamento claro, escuta ativa e suporte contínuo para cada fase do seu negócio. Meu compromisso é estar ao seu lado, ajudando você a tomar decisões com confiança, clareza e propósito.
       </p>
+
+      <Button span="Quero fazer parte da Mentoria"/>
     </div>
     <div class="relative">
       <div class="w-32 h-auto">
